# Video-Stabilization

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: deep.yaml  evaluation.yaml  homography.yaml  optical_flow.yaml
demo/: app.py
notebooks/: demo.ipynb
scripts/: demo.py  evaluate.py  train.py
src/video_stabilization/: __init__.py  core.py
src/video_stabilization/utils/: __init__.py  utils.py
tests/: test_video_stabilization.py
